<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <RadioGroup
            android:id="@id/radio"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                style="@style/recomm_radio_button"
                android:text="@string/thread_all" />


            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/recomm_radio_button"
                android:text="@string/thread_new" />


            <RadioButton
                android:id="@+id/radioButton3"
                style="@style/recomm_radio_button"
                android:text="@string/thread_good" />


            <RadioButton
                android:id="@+id/radioButton4"
                style="@style/recomm_radio_button"
                android:text="@string/thread_hot" />

        </RadioGroup>
        <include layout="@layout/include_line_thin"></include>
    </LinearLayout>

</LinearLayout>