<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/selector_list_item"
        android:paddingBottom="@dimen/content_border"
        android:paddingLeft="@dimen/content_border"
        android:paddingRight="@dimen/content_border"
        android:paddingTop="@dimen/content_border">

        <com.kit.imagelib.widget.imageview.roundedimageview.RoundedImageView
            android:id="@+id/icon"
            style="@style/imageview_round_corner"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/content_border"
            android:src="@drawable/ic_forum_default" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_right"
            android:visibility="gone"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/arrow"
            android:layout_toRightOf="@id/icon"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forum_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/default_value"
                    android:textColor="@color/text_black"
                    android:layout_toLeftOf="@+id/count"
                    android:layout_centerVertical="true"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_4" />

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="1dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:singleLine="true"
                    android:paddingBottom="1dp"
                    android:background="@drawable/bg_round_alpha"
                    android:gravity="center"
                    android:text="@string/num_today_post"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/icon"
            android:layout_marginTop="@dimen/margin_default_large_large"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvThreadNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:lines="1"
                android:text="@string/num_thread"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_1" />


            <ImageView
                android:id="@+id/line"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:paddingLeft="@dimen/content_border"
                android:paddingRight="@dimen/content_border"
                android:src="@drawable/ic_line_vertical_lighy_gray" />


            <TextView
                android:id="@+id/tvPostNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:lines="1"
                android:text="@string/num_post"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_1" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <include
        layout="@layout/include_line_thin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>